# pyeml_bindings

./: .gitignore  LICENSE  README.md  __init__.py  emlcore_kiesraad_strict.py  emlexternals_kiesraad_strict.py  kiesraad_eml_extensions.py  kiesraad_eml_restrictions.py  mod_110a_electionevent_kiesraad_strict.py  mod_210_nomination_kiesraad_strict.py  mod_230_candidatelist_kiesraad_strict.py  mod_510_count_kiesraad_strict.py  mod_520_result_kiesraad_strict.py  pyeml_bindings_testreport.html  pyproject.toml  testfiles.txt  x_al_kiesraad_strict.py
.github/workflows/: test.yml
namespace/: __init__.py
pyeml_bindings/: __init__.py  emlcore_kiesraad_strict.py  kiesraad_eml_extensions.py  kiesraad_eml_restrictions.py  mod_210_nomination_kiesraad_strict.py  mod_510_count_kiesraad_strict.py  x_nl_kiesraad_strict.py
pyeml_bindings/converters/: xml_date_time.py
pyeml_bindings/namespace/: ns_map.py
src/: emlcore_kiesraad_strict.py  emlexternals_kiesraad_strict.py  kiesraad_eml_restrictions.py  mod_110a_electionevent_kiesraad_strict.py  mod_210_nomination_kiesraad_strict.py  mod_230_candidatelist_kiesraad_strict.py  mod_510_count_kiesraad_strict.py  mod_520_result_kiesraad_strict.py
src/namespace/: __init__.py
test/: pyeml_bindings_testreport.html  test_roundtrip.py
tests/: test_roundtrip.py
