[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeml_bindings"
description = "Data bindings for the EML_NL Standard"
version = "1.0.0"
authors = [{name = "Chris Mostert", email = "chris.mostert@kiesraad.nl"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xsdata == 23.*"
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "formencode"
]

[project.urls]
Home = "https://github.com/kiesraad/pyeml_bindings"
